@@ -6,6 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 
 - Added Russian Rubles to paypal currencies and locale
+- Fix php warnings when switching between non-calculated shipping modules
 
 2.8.9 - 9/22/2013 - Aaron Edwards, Arnold, Marko Miljus
 ----------------------------------------------------------------------
